--- a/page2.html
+++ b/page2.html
@@ -14,7 +14,7 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      height: 100vh; /* Full height */
+      height: 100vh;
       margin: 0;
       color: white;
       text-align: center;
@@ -58,9 +58,60 @@
       bottom: 10px;
       width: 100%;
     }
+    .game-container {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    .click-circle {
+      width: 100px;
+      height: 100px;
+      background-color: #8B4513; /* Brown color */
+      border-radius: 50%;
+      cursor: pointer;
+      margin-bottom: 20px;
+      position: relative;
+      transition: transform 0.1s ease-in-out;
+    }
+    .chocolate-chip {
+      position: absolute;
+      background-color: #3E2723; /* Dark brown color */
+      border-radius: 50%;
+      transition: transform 0.1s ease-in-out;
+    }
+    .chocolate-chip:nth-child(1) { width: 15px; height: 15px; top: 20%; left: 20%; }
+    .chocolate-chip:nth-child(2) { width: 12px; height: 12px; top: 30%; left: 60%; }
+    .chocolate-chip:nth-child(3) { width: 18px; height: 18px; top: 50%; left: 40%; }
+    .chocolate-chip:nth-child(4) { width: 14px; height: 14px; top: 70%; left: 30%; }
+    .chocolate-chip:nth-child(5) { width: 16px; height: 16px; top: 80%; left: 70%; }
+    .chocolate-chip:nth-child(6) { width: 13px; height: 13px; top: 60%; left: 80%; }
+    .chocolate-chip:nth-child(7) { width: 17px; height: 17px; top: 40%; left: 10%; }
+    .chocolate-chip:nth-child(8) { width: 14px; height: 14px; top: 20%; left: 80%; }
+    .chocolate-chip:nth-child(9) { width: 15px; height: 15px; top: 10%; left: 50%; }
+    .chocolate-chip:nth-child(10) { width: 12px; height: 12px; top: 30%; left: 10%; }
   </style>
 </head>
 <body>
+
+  <div class="game-container">
+    <div class="click-circle" onclick="incrementScore()">
+      <!-- Chocolate chips -->
+      <div class="chocolate-chip"></div>
+      <div class="chocolate-chip"></div>
+      <div class="chocolate-chip"></div>
+      <div class="chocolate-chip"></div>
+      <div class="chocolate-chip"></div>
+      <div class="chocolate-chip"></div>
+      <div class="chocolate-chip"></div>
+      <div class="chocolate-chip"></div>
+      <div class="chocolate-chip"></div>
+      <div class="chocolate-chip"></div>
+    </div>
+    <div class="score" id="score">0</div>
+  </div>
 
   <div class="download-button-container">
     <a href="https://www.mediafire.com/file/your-download-link" class="download-button">Download</a>
@@ -70,7 +121,18 @@
   <a href="index.html" class="redirect-button">Go back to Main Page</a>
 
   <script>
-    // Add any additional JavaScript if needed
+    let score = 0;
+
+    function incrementScore() {
+      score++;
+      document.getElementById('score').textContent = score;
+      // Apply shrink effect
+      const circle = document.querySelector('.click-circle');
+      circle.style.transform = 'scale(0.9)';
+      setTimeout(() => {
+        circle.style.transform = 'scale(1)';
+      }, 100);
+    }
   </script>
 
   <!-- Credit Section -->
