--- a/page2.html
+++ b/page2.html
@@ -80,6 +80,7 @@
       position: absolute;
       background-color: #3E2723; /* Dark brown color */
       border-radius: 50%;
+      border: 2px solid white; /* Thin white border */
       transition: transform 0.1s ease-in-out;
     }
     .chocolate-chip:nth-child(1) { width: 15px; height: 15px; top: 20%; left: 20%; }
