--- a/page2.html
+++ b/page2.html
@@ -173,7 +173,7 @@
 
   <!-- Credit Section -->
   <footer>
-    <p>Website created by <strong>Hyperturret</strong></p>
+    <p>Game created by <strong>Hyperturret</strong></p>
   </footer>
 
 </body>
