--- a/page2.html
+++ b/page2.html
@@ -36,6 +36,7 @@
       margin-bottom: 20px;
       position: relative;
       transition: transform 0.1s ease-in-out;
+      outline: none; /* Remove blue outline */
     }
     .chocolate-chip {
       position: absolute;
