--- a/page2.html
+++ b/page2.html
@@ -38,6 +38,9 @@
       transition: transform 0.1s ease-in-out;
       outline: none; /* Remove blue outline */
     }
+    .click-circle:focus {
+      outline: none;
+    }
     .chocolate-chip {
       position: absolute;
       background-color: #3E2723; /* Dark brown color */
