--- a/page2.html
+++ b/page2.html
@@ -37,8 +37,10 @@
       position: relative;
       transition: transform 0.1s ease-in-out;
       outline: none; /* Remove blue outline */
+      user-select: none; /* Prevent text selection */
     }
-    .click-circle:focus {
+    .click-circle:focus,
+    .click-circle:focus-visible {
       outline: none; /* Ensure no outline on focus */
     }
     .chocolate-chip {
@@ -85,7 +87,6 @@
   </div>
 
   <script>
-    // Open the IndexedDB and retrieve or set the score
     async function openDatabase() {
       return new Promise((resolve, reject) => {
         const request = indexedDB.open('cookieClickerDB', 1);
@@ -151,7 +152,6 @@
         score++;
         document.getElementById('score').textContent = score;
         await updateScore(score);
-        // Apply shrink effect
         const circle = document.querySelector('.click-circle');
         circle.style.transform = 'scale(0.9)';
         setTimeout(() => {
@@ -162,7 +162,6 @@
       }
     }
 
-    // Initialize score on page load
     async function initialize() {
       try {
         const score = await getScore();
@@ -175,7 +174,6 @@
     initialize();
   </script>
 
-  <!-- Credit Section -->
   <footer>
     <p>Game created by <strong>Hyperturret</strong></p>
   </footer>
