--- a/page2.html
+++ b/page2.html
@@ -11,21 +11,30 @@
       background-position: center;
       background-repeat: no-repeat;
       display: flex;
-      flex-direction: column;
-      justify-content: center;
+      justify-content: flex-start;
       align-items: center;
       height: 100vh;
       margin: 0;
       color: white;
-      text-align: center;
     }
     .game-container {
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
+      position: relative;
+      margin-left: 50px;
       display: flex;
       flex-direction: column;
       align-items: center;
+    }
+    .score-container {
+      position: absolute;
+      top: -50px;
+      background-color: #8B4513; /* Brown */
+      border: 3px solid #FFD700; /* Gold border */
+      border-radius: 10px;
+      padding: 10px 20px;
+      font-family: 'Comic Sans MS', cursive, sans-serif;
+      font-size: 1.5em;
+      color: #FFD700; /* Gold text */
+      box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
     }
     .click-circle {
       width: 100px;
@@ -33,7 +42,6 @@
       background-color: #8B4513; /* Brown color */
       border-radius: 50%;
       cursor: pointer;
-      margin-bottom: 20px;
       position: relative;
       transition: transform 0.1s ease-in-out;
       user-select: none;
@@ -58,12 +66,16 @@
       position: absolute;
       bottom: 10px;
       width: 100%;
+      text-align: center;
     }
   </style>
 </head>
 <body>
 
   <div class="game-container">
+    <div class="score-container" id="score-container">
+      Clicks: <span id="score">0</span>
+    </div>
     <div class="click-circle" onclick="incrementScore()">
       <div class="chocolate-chip"></div>
       <div class="chocolate-chip"></div>
@@ -76,7 +88,6 @@
       <div class="chocolate-chip"></div>
       <div class="chocolate-chip"></div>
     </div>
-    <div class="score" id="score">0</div>
   </div>
 
   <script>
