--- a/page2.html
+++ b/page2.html
@@ -11,30 +11,21 @@
       background-position: center;
       background-repeat: no-repeat;
       display: flex;
-      justify-content: flex-start;
+      flex-direction: column;
+      justify-content: center;
       align-items: center;
       height: 100vh;
       margin: 0;
       color: white;
+      text-align: center;
     }
     .game-container {
-      position: relative;
-      margin-left: 50px;
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
       display: flex;
       flex-direction: column;
       align-items: center;
-    }
-    .score-container {
-      position: absolute;
-      top: -50px;
-      background-color: #8B4513; /* Brown */
-      border: 3px solid #FFD700; /* Gold border */
-      border-radius: 10px;
-      padding: 10px 20px;
-      font-family: 'Comic Sans MS', cursive, sans-serif;
-      font-size: 1.5em;
-      color: #FFD700; /* Gold text */
-      box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
     }
     .click-circle {
       width: 100px;
@@ -42,15 +33,19 @@
       background-color: #8B4513; /* Brown color */
       border-radius: 50%;
       cursor: pointer;
+      margin-bottom: 20px;
       position: relative;
       transition: transform 0.1s ease-in-out;
-      user-select: none;
+      outline: 2px solid transparent; /* Transparent focus outline */
+      user-select: none; /* Prevent text selection */
+      -webkit-tap-highlight-color: transparent; /* Disable highlight on touch */
     }
     .chocolate-chip {
       position: absolute;
       background-color: #3E2723; /* Dark brown color */
       border-radius: 50%;
       border: 0.5px solid white; /* Thinner white border */
+      pointer-events: none; /* Prevent chips from triggering events */
     }
     .chocolate-chip:nth-child(1) { width: 8px; height: 8px; top: 15%; left: 15%; }
     .chocolate-chip:nth-child(2) { width: 6px; height: 6px; top: 25%; left: 60%; }
@@ -66,17 +61,14 @@
       position: absolute;
       bottom: 10px;
       width: 100%;
-      text-align: center;
     }
   </style>
 </head>
 <body>
 
   <div class="game-container">
-    <div class="score-container" id="score-container">
-      Clicks: <span id="score">0</span>
-    </div>
-    <div class="click-circle" onclick="incrementScore()">
+    <div class="click-circle" onclick="incrementScore()" tabindex="0">
+      <!-- Chocolate chips -->
       <div class="chocolate-chip"></div>
       <div class="chocolate-chip"></div>
       <div class="chocolate-chip"></div>
@@ -88,6 +80,7 @@
       <div class="chocolate-chip"></div>
       <div class="chocolate-chip"></div>
     </div>
+    <div class="score" id="score">0</div>
   </div>
 
   <script>
@@ -156,6 +149,12 @@
         score++;
         document.getElementById('score').textContent = score;
         await updateScore(score);
+        const circle = document.querySelector('.click-circle');
+        circle.style.transform = 'scale(0.9)';
+        setTimeout(() => {
+          circle.style.transform = 'scale(1)';
+          circle.focus(); // Ensure focus remains
+        }, 100);
       } catch (error) {
         console.error('Error handling score:', error);
       }
