--- a/page2.html
+++ b/page2.html
@@ -30,11 +30,11 @@
       background-color: #8B4513; /* Brown */
       border: 3px solid #FFD700; /* Gold border */
       border-radius: 10px;
-      padding: 10px 20px;
+      padding: 5px 15px; /* Thinner height */
       font-family: 'Comic Sans MS', cursive, sans-serif;
       font-size: 1.5em;
       color: #FFD700; /* Gold text */
-      margin-bottom: 20px;
+      margin-bottom: 10px; /* Slightly closer to the cookie */
       box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
     }
     .click-circle {
