--- a/page2.html
+++ b/page2.html
@@ -19,6 +19,7 @@
       font-family: Arial, sans-serif;
       color: white;
     }
+
     .counter-box {
       width: 100%;
       background-color: rgba(0, 0, 0, 0.5);
@@ -28,6 +29,7 @@
       font-weight: bold;
       box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
     }
+
     .game-container {
       display: flex;
       flex-direction: column;
@@ -35,25 +37,35 @@
       justify-content: center;
       flex-grow: 1;
     }
+
     .click-circle {
       width: 300px;
       height: 300px;
-      background-color: #8B4513;
+      background-color: #8B4513; /* Cookie color */
       border-radius: 50%;
       position: relative;
       box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
       cursor: pointer;
       transition: transform 0.1s ease-in-out;
+      outline: none; /* Removed focus blue border */
+      user-select: none;
+      -webkit-tap-highlight-color: transparent; /* Disable tap highlight */
     }
+
     .chocolate-chip {
       position: absolute;
-      background-color: #3E2723;
+      background-color: #3E2723; /* Dark chocolate color */
       border-radius: 50%;
-      pointer-events: none;
+      pointer-events: none; /* Prevent chips from triggering events */
     }
-    .chocolate-chip:nth-child(1) { width: 10px; height: 10px; top: 15%; left: 25%; }
-    .chocolate-chip:nth-child(2) { width: 8px; height: 8px; top: 45%; left: 60%; }
-    .chocolate-chip:nth-child(3) { width: 12px; height: 12px; top: 75%; left: 35%; }
+
+    /* Chocolate chips positions */
+    .chocolate-chip:nth-child(1) { width: 15px; height: 15px; top: 20%; left: 30%; }
+    .chocolate-chip:nth-child(2) { width: 12px; height: 12px; top: 50%; left: 60%; }
+    .chocolate-chip:nth-child(3) { width: 18px; height: 18px; top: 80%; left: 40%; }
+    .chocolate-chip:nth-child(4) { width: 10px; height: 10px; top: 60%; left: 10%; }
+    .chocolate-chip:nth-child(5) { width: 12px; height: 12px; top: 15%; left: 70%; }
+
     footer {
       width: 100%;
       background-color: rgba(0, 0, 0, 0.5);
@@ -63,6 +75,7 @@
       padding: 10px 0;
       box-shadow: 0px -2px 4px rgba(0, 0, 0, 0.5);
     }
+
     .footer-button {
       color: white;
       background: transparent;
@@ -72,6 +85,7 @@
       cursor: pointer;
       text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.8);
     }
+
     .footer-button:hover {
       text-decoration: underline;
     }
@@ -86,6 +100,8 @@
   <div class="game-container">
     <div class="click-circle" onclick="incrementScore()" tabindex="0">
       <!-- Chocolate chips -->
+      <div class="chocolate-chip"></div>
+      <div class="chocolate-chip"></div>
       <div class="chocolate-chip"></div>
       <div class="chocolate-chip"></div>
       <div class="chocolate-chip"></div>
@@ -167,7 +183,7 @@
         document.getElementById('score').textContent = score;
         await updateScore(score);
         const circle = document.querySelector('.click-circle');
-        circle.style.transform = 'scale(0.9)';
+        circle.style.transform = 'scale(1.1)'; // Scale up cookie and chips
         setTimeout(() => {
           circle.style.transform = 'scale(1)';
         }, 100);
