--- a/page2.html
+++ b/page2.html
@@ -6,82 +6,98 @@
   <title>Cookie Clicker Game</title>
   <style>
     body {
-      background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)), url('https://source.unsplash.com/1600x900/?nature,water');
+      background-image: linear-gradient(to bottom, #00509E, #001F54);
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
+      margin: 0;
       display: flex;
       flex-direction: column;
-      justify-content: center;
       align-items: center;
+      justify-content: space-between;
       height: 100vh;
-      margin: 0;
+      font-family: Arial, sans-serif;
       color: white;
+    }
+
+    .counter-box {
+      width: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
       text-align: center;
+      padding: 10px;
+      font-size: 1.5em;
+      font-weight: bold;
+      box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
     }
 
     .game-container {
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
       display: flex;
       flex-direction: column;
       align-items: center;
+      justify-content: center;
+      flex-grow: 1;
     }
 
     .click-circle {
-      width: 150px;
-      height: 150px;
-      background-color: #F5D6B1; /* Light beige cookie color */
+      width: 300px;
+      height: 300px;
+      background-color: #8B4513; /* Cookie color */
       border-radius: 50%;
-      cursor: pointer;
-      margin-bottom: 20px;
       position: relative;
+      box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
+      cursor: pointer;
       transition: transform 0.1s ease-in-out;
-      outline: 2px solid transparent;
-      box-shadow: inset -5px -5px 15px #E6B995, inset 5px 5px 15px #F8E8C5; /* Adds light and shadow details */
+      outline: none;
+      user-select: none;
+      -webkit-tap-highlight-color: transparent; /* Disable tap highlight */
     }
 
     .chocolate-chip {
       position: absolute;
-      background-color: #5C3823; /* Chocolate chip color */
+      background-color: #3E2723; /* Dark chocolate color */
       border-radius: 50%;
-      pointer-events: none;
-      box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3); /* Adds depth to chips */
+      pointer-events: none; /* Prevent chips from triggering events */
+      box-shadow: inset -2px -2px 4px rgba(0, 0, 0, 0.5), inset 2px 2px 4px rgba(255, 255, 255, 0.2); /* Adds depth to chips */
     }
 
-    .chocolate-chip:nth-child(1) { width: 16px; height: 16px; top: 25%; left: 30%; }
-    .chocolate-chip:nth-child(2) { width: 12px; height: 12px; top: 40%; left: 60%; }
-    .chocolate-chip:nth-child(3) { width: 18px; height: 18px; top: 60%; left: 40%; }
-    .chocolate-chip:nth-child(4) { width: 14px; height: 14px; top: 70%; left: 20%; }
-    .chocolate-chip:nth-child(5) { width: 15px; height: 15px; top: 20%; left: 65%; }
-
-    /* White highlight to match the light reflection */
-    .click-circle::before {
-      content: '';
-      position: absolute;
-      top: 10%;
-      left: 10%;
-      width: 30px;
-      height: 10px;
-      background-color: rgba(255, 255, 255, 0.7);
-      border-radius: 20px;
-      transform: rotate(-15deg);
-    }
-
-    .score {
-      font-size: 2em;
-      margin-top: 10px;
-    }
+    /* Chocolate chips positions and sizes */
+    .chocolate-chip:nth-child(1) { width: 25px; height: 25px; top: 15%; left: 30%; }
+    .chocolate-chip:nth-child(2) { width: 22px; height: 22px; top: 50%; left: 60%; }
+    .chocolate-chip:nth-child(3) { width: 28px; height: 28px; top: 75%; left: 45%; }
+    .chocolate-chip:nth-child(4) { width: 20px; height: 20px; top: 60%; left: 15%; }
+    .chocolate-chip:nth-child(5) { width: 24px; height: 24px; top: 10%; left: 65%; }
 
     footer {
-      position: absolute;
-      bottom: 10px;
       width: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      padding: 10px 0;
+      box-shadow: 0px -2px 4px rgba(0, 0, 0, 0.5);
+    }
+
+    .footer-button {
+      color: white;
+      background: transparent;
+      border: none;
+      font-size: 1em;
+      font-weight: bold;
+      cursor: pointer;
+      text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.8);
+    }
+
+    .footer-button:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
 <body>
+
+  <div class="counter-box">
+    <span id="score">0</span> cookies
+  </div>
+
   <div class="game-container">
     <div class="click-circle" onclick="incrementScore()" tabindex="0">
       <!-- Chocolate chips -->
@@ -91,8 +107,15 @@
       <div class="chocolate-chip"></div>
       <div class="chocolate-chip"></div>
     </div>
-    <div class="score" id="score">0</div>
   </div>
+
+  <footer>
+    <button class="footer-button">Cookie</button>
+    <button class="footer-button">Store</button>
+    <button class="footer-button">Special</button>
+    <button class="footer-button">Stats</button>
+    <button class="footer-button">Misc</button>
+  </footer>
 
   <script>
     async function openDatabase() {
@@ -159,11 +182,11 @@
         let score = await getScore();
         score++;
         document.getElementById('score').textContent = score;
+        await updateScore(score);
         const circle = document.querySelector('.click-circle');
-        circle.style.transform = 'scale(0.9)';
+        circle.style.transform = 'scale(1.1)'; // Scale up cookie and chips
         setTimeout(() => {
           circle.style.transform = 'scale(1)';
-          circle.focus(); // Ensure focus remains
         }, 100);
       } catch (error) {
         console.error('Error handling score:', error);
@@ -182,8 +205,5 @@
     initialize();
   </script>
 
-  <footer>
-    <p>Game created by <strong>Hyperturret</strong></p>
-  </footer>
 </body>
 </html>
